--- a/nginx.default.conf
+++ b/nginx.default.conf
@@ -4,7 +4,7 @@ server {
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /src/app/webroot;
+    root /src;
 
     proxy_connect_timeout       3600;
     proxy_send_timeout          3600;
@@ -15,7 +15,8 @@ server {
     client_max_body_size 20M;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$query_string;
+        # try_files $uri $uri/ /index.php$is_args$query_string;
+        rewrite ^/(.*)$ /index.php?c=$1 last;
     }
 
     location ~ \.php$ {
@@ -40,7 +41,7 @@ server {
     listen 443 ssl http2;
     server_name _;
 
-    root /src/app/webroot;
+    root /src;
     index index.php;
 
     access_log /var/log/nginx/access.log;
@@ -56,7 +57,8 @@ server {
     client_max_body_size 20M;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$query_string;
+        # try_files $uri $uri/ /index.php$is_args$query_string;
+        rewrite ^/(.*)$ /index.php?c=$1 last;
     }
 
     location ~ \.php$ {
